--- a/Câmara-mento - Juan Montoya/Câmara-mento - Juan Montoya.csproj
+++ b/Câmara-mento - Juan Montoya/Câmara-mento - Juan Montoya.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CameraWaitScreen.cs">
+    <Compile Include="Screens\CameraWaitScreen.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CameraWaitScreen.Designer.cs">
+    <Compile Include="Screens\CameraWaitScreen.Designer.cs">
       <DependentUpon>CameraWaitScreen.cs</DependentUpon>
     </Compile>
-    <Compile Include="CharPrepScreen.cs">
+    <Compile Include="Screens\CharPrepScreen.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CharPrepScreen.Designer.cs">
+    <Compile Include="Screens\CharPrepScreen.Designer.cs">
       <DependentUpon>CharPrepScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
@@ -115,10 +115,16 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="CameraWaitScreen.resx">
+    <Compile Include="Screens\TableScreen.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Screens\TableScreen.Designer.cs">
+      <DependentUpon>TableScreen.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Screens\CameraWaitScreen.resx">
       <DependentUpon>CameraWaitScreen.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CharPrepScreen.resx">
+    <EmbeddedResource Include="Screens\CharPrepScreen.resx">
       <DependentUpon>CharPrepScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
@@ -158,6 +164,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Screens\TableScreen.resx">
+      <DependentUpon>TableScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
