--- a/Câmara-mento - Juan Montoya/Câmara-mento - Juan Montoya.csproj
+++ b/Câmara-mento - Juan Montoya/Câmara-mento - Juan Montoya.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameOverScreen.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GameOverScreen.Designer.cs">
+      <DependentUpon>GameOverScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Screens\6amScreen.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -127,6 +133,9 @@
     <Compile Include="Screens\TableScreen.Designer.cs">
       <DependentUpon>TableScreen.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="GameOverScreen.resx">
+      <DependentUpon>GameOverScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Screens\6amScreen.resx">
       <DependentUpon>6amScreen.cs</DependentUpon>
     </EmbeddedResource>
